# kokkos_learning

./: CMakeLists.txt  README.md
01_basics/: vector_add.cpp
02_memory/: dot_product.cpp
03_capstone/: simple_spmv.cpp
04_benchmark/: benchmark_spmv.cpp
05_reordering/: spmv_metis.cpp
06_gpu_preparation/: spmv_gpu.cpp
